fixed stylistic bugs

--- a/index.html
+++ b/index.html
@@ -10,11 +10,36 @@
         <link data-trunk rel="copy-dir" href="./scripts"/>
 
         <link rel="preload" href="icons/loading.svg" as="image"/>
+        <link rel="preload" href="icons/home.png" as="image"/>
+        <link rel="preload" href="icons/business.png" as="image"/>
+        <link rel="preload" href="icons/politics.png" as="image"/>
+        <link rel="preload" href="icons/society.png" as="image"/>
+        <link rel="preload" href="icons/world.svg" as="image"/>
+        <link rel="preload" href="icons/hb-menu.svg" as="image"/>
+        <link rel="preload" href="icons/nhk.svg" as="image"/>
+        <link rel="preload" href="icons/yomiuri.svg" as="image"/>
+        <link rel="preload" href="icons/auto_theme.svg" as="image"/>
+        <link rel="preload" href="icons/award.svg" as="image"/>
+        <link rel="preload" href="icons/chevron.svg" as="image"/>
+        <link rel="preload" href="icons/close.svg" as="image"/>
+        <link rel="preload" href="icons/culture.svg" as="image"/>
+        <link rel="preload" href="icons/dark_theme.svg" as="image"/>
+        <link rel="preload" href="icons/editorial.svg" as="image"/>
+        <link rel="preload" href="icons/features.svg" as="image"/>
+        <link rel="preload" href="icons/japan.svg" as="image"/>
+        <link rel="preload" href="icons/light_theme.svg" as="image"/>
+        <link rel="preload" href="icons/list.svg" as="image"/>
+        <link rel="preload" href="icons/newspaper.svg" as="image"/>
+        <link rel="preload" href="icons/science.svg" as="image"/>
 
         <link rel="stylesheet" href="./styles/styles.css"/>
         <link rel="stylesheet" href="./styles/navbar.css"/>
         <link rel="stylesheet" href="./styles/main.css"/>
         <link rel="stylesheet" href="./styles/left-menu.css"/>
+        <link rel="stylesheet" href="./styles/subgenre-btn.css"/>
+        <link rel="stylesheet" href="./styles/breadcrumb.css"/>
+
+
     </head>
     <body>
         <div id="initial-loading" style="display: flex; justify-content: center; align-items: center; width: 100vw; height: 100vh; background-color: light-dark(#fff, #020202);">
